--- a/NewCryptoApp.csproj
+++ b/NewCryptoApp.csproj
@@ -58,11 +58,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Core\MVVM\View\Page1.xaml">
+    <Page Include="Core\MVVM\View\InfoPageView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Core\MVVM\View\Page2.xaml">
+    <Page Include="Core\MVVM\View\MainPageView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -76,16 +76,22 @@
     </Compile>
     <Compile Include="Core\API\APIException\ApiExtentions.cs" />
     <Compile Include="Core\API\BaseAPI.cs" />
+    <Compile Include="Core\API\CoinGesko\CoinGeskoAPI.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\CoinsDTO.cs" />
     <Compile Include="Core\API\Respones.cs" />
     <Compile Include="Core\Lang\LangController.cs" />
-    <Compile Include="Core\Logger\Logger.cs" />
-    <Compile Include="Core\MVVM\View\Page1.xaml.cs">
-      <DependentUpon>Page1.xaml</DependentUpon>
+    <Compile Include="Core\Logger.cs" />
+    <Compile Include="Core\MVVM\ViewModel\InfoPageViewModel.cs" />
+    <Compile Include="Core\MVVM\ViewModel\MainPageViewModel.cs" />
+    <Compile Include="Core\MVVM\ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="Core\MVVM\View\InfoPageView.xaml.cs">
+      <DependentUpon>InfoPageView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Core\MVVM\View\Page2.xaml.cs">
-      <DependentUpon>Page2.xaml</DependentUpon>
+    <Compile Include="Core\MVVM\View\MainPageView.xaml.cs">
+      <DependentUpon>MainPageView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Core\Navigate\Navigate.cs" />
+    <Compile Include="Core\MVVM\ViewModel\ViewModel.cs" />
+    <Compile Include="Core\Navigate.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -123,7 +129,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Core\MVVM\Model\" />
-    <Folder Include="Core\MVVM\ViewModel\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icons\Refresh.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
