--- a/NewCryptoApp.csproj
+++ b/NewCryptoApp.csproj
@@ -161,5 +161,11 @@
     <Resource Include="Image\Icons\Exchange.png" />
     <Resource Include="Image\Icons\Nft.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icons\Convertor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icons\Home.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
