--- a/NewCryptoApp.csproj
+++ b/NewCryptoApp.csproj
@@ -66,7 +66,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Core\MVVM\View\MoreInfoExchangesView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Core\MVVM\View\SearchPageView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Core\MVVM\View\TradePageView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -82,10 +90,16 @@
     <Compile Include="Core\API\BaseAPI.cs" />
     <Compile Include="Core\API\CoinGesko\CoinGeskoAPI.cs" />
     <Compile Include="Core\API\CoinGesko\Model\CoinsDTO.cs" />
-    <Compile Include="Core\API\CoinGesko\Model\Find\FindCoinsDTO.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\CoinMoreInfo\Auxiliary\ConvertedDTO.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\CoinMoreInfo\Auxiliary\DescriptionDTO.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\Find\Auxiliary\FindCoinsDTO.cs" />
     <Compile Include="Core\API\CoinGesko\Model\Find\FindDTO.cs" />
-    <Compile Include="Core\API\CoinGesko\Model\Find\FindExchangesDTO.cs" />
-    <Compile Include="Core\API\CoinGesko\Model\Find\FindNftDTO.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\Find\Auxiliary\FindExchangesDTO.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\Find\Auxiliary\FindNftDTO.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\CoinMoreInfo\Auxiliary\MarketDTO.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\CoinMoreInfo\MoreInfoCoins.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\CoinMoreInfo\Auxiliary\TickerDTO.cs" />
+    <Compile Include="Core\API\CoinGesko\Model\MoreInfoExchangesDTO.cs" />
     <Compile Include="Core\API\Respones.cs" />
     <Compile Include="Core\Convert.cs" />
     <Compile Include="Core\Lang\LangController.cs" />
@@ -93,7 +107,9 @@
     <Compile Include="Core\MVVM\ViewModel\InfoPageViewModel.cs" />
     <Compile Include="Core\MVVM\ViewModel\MainPageViewModel.cs" />
     <Compile Include="Core\MVVM\ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="Core\MVVM\ViewModel\MoreInfoExchangesViewModel.cs" />
     <Compile Include="Core\MVVM\ViewModel\SearchPageViewModel.cs" />
+    <Compile Include="Core\MVVM\ViewModel\TradePageViewModel.cs" />
     <Compile Include="Core\MVVM\View\InfoPageView.xaml.cs">
       <DependentUpon>InfoPageView.xaml</DependentUpon>
     </Compile>
@@ -101,10 +117,17 @@
       <DependentUpon>MainPageView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Core\MVVM\ViewModel\ViewModel.cs" />
+    <Compile Include="Core\MVVM\View\MoreInfoExchangesView.xaml.cs">
+      <DependentUpon>MoreInfoExchangesView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Core\MVVM\View\SearchPageView.xaml.cs">
       <DependentUpon>SearchPageView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Core\MVVM\View\TradePageView.xaml.cs">
+      <DependentUpon>TradePageView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Core\Navigate.cs" />
+    <Compile Include="Core\Store.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -166,6 +189,24 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Image\Icons\Home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icons\Trade.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icons\ClearFilter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icons\Facebook.png" />
+    <Resource Include="Image\Icons\Reddit.png" />
+    <Resource Include="Image\Icons\Telegram.png" />
+    <Resource Include="Image\Icons\Twitter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icons\Site.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icons\Back.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
