--- a/NewCryptoApp.csproj
+++ b/NewCryptoApp.csproj
@@ -372,9 +372,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Core\MVVM\Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Image\Icons\Refresh.png" />
   </ItemGroup>
